# images

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build-images.yml
src/: container.rs  main.rs  settings.rs
src/common/: enums.rs  format.rs  mod.rs  variant.rs
src/controllers/: cleaner.rs  http.rs  mod.rs
src/entities/: avatar.rs  image.rs  mod.rs
src/gateways/: http.rs  images.rs  mod.rs  s3.rs  video.rs
src/usecases/: clean_videos.rs  gateways.rs  get_image.rs  image_exists.rs  mod.rs  upload_avatar.rs  upload_image.rs
