[package]
name = "images"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.19", features = ["headers"] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
image = { version = "0.24.6", features = ["webp", "webp-encoder"] }
uuid = { version = "1.4.1", features = [ "v4" ] }
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
dotenv = "0.15.0"
