[package]
name = "images"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.19", features = ["headers"] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
image = { version = "0.24.6", features = ["webp", "webp-encoder"] }
uuid = { version = "1.4.1", features = [ "v4" ] }
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
dotenv = "0.15.0"
tower-http = { version = "0.4.3", features = ["validate-request", "catch-panic", "sensitive-headers", "timeout", "auth"] }
tower = { version = "0.4.13" }
async-trait = "0.1.72"
reqwest = { version = "0.11.18", features = ["json"] }
sha2 = "0.10.7"
hex = "0.4.3"
infer = "0.15.0"
anyhow = "1.0.72"
